--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@ ga('send', 'pageview');
             <div class="sidebar-wrapper">
 
 		            <div class="profile-container">
-                <img class="profile img-circle" src="https://ryo-utsunomiya.github.io/assets/images/avatar.png" alt="" />
+                <img class="profile img-circle" src="https://ryo-utsunomiya.github.io/assets/images/photo.jpeg" alt="" />
                 <h1 class="name">Ryo Utsunomiya</h1>
                 <h3 class="tagline">Software Engineer</h3>
             </div>
